@@ -1,8 +1,8 @@
 <?php global $RUNTIMER; ?>
 <table class="fullwidth">
 <tr><td>
-<div id="xhtml-validator"><a href="http://validator.w3.org/check/referer">Valid XHTML 1.0</a>
-<a href="http://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a>
+<div id="html-validator"><a href="http://validator.w3.org/check/referer">Valid HTML 5!</a>
+<a href="http://jigsaw.w3.org/css-validator/check/referer">Valid CSS 3!</a>
 </div>
 </td><td>
 <span class="debug"><?php echo fmt("Page Execution took %s seconds", $RUNTIMER->getStats())?></span>
