@@ -465,7 +465,7 @@ a.named-interwiki {
     background: url("images/interwiki.png") right top no-repeat;
 }
 
-#xhtml-validator {
+#html-validator {
     padding-bottom: 0;
     vertical-align: middle;
 }
