@@ -1,7 +1,7 @@
 <!-- shamino.com debug -->
 <div class="debug">
 <?php global $RUNTIMER; ?>
-<span id="xhtml-validator"><a class="wikilink" href="http://validator.w3.org/check/referer">Valid XHTML 1.0</a> &nbsp; <a class="wikilink" href="http://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a>
+<span id="html-validator"><a class="wikilink" href="http://validator.w3.org/check/referer">Valid HTML 5!</a> &nbsp; <a class="wikilink" href="http://jigsaw.w3.org/css-validator/check/referer">Valid CSS 3!</a>
 </span>
   <span><?php echo fmt("Page Execution took %s seconds", $RUNTIMER->getStats()) ?>
 <?php $mem = @memory_get_usage(); if ($mem) { ?>
